--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "node-typescript-boilerplate",
-  "version": "0.0.0",
-  "description": "TypeScript",
+  "name": "playwright-utils",
+  "version": "0.0.1",
+  "description": "Playwright utils",
   "engines": {
     "node": ">= 12.13 <13"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Cyrus-d/playwright-utils.git"
   },
   "devDependencies": {
     "@types/jest": "^25.2.1",
@@ -13,25 +17,31 @@
     "eslint": "^6.8.0",
     "eslint-plugin-sort-keys-fix": "^1.1.0",
     "jest": "^25.3.0",
+    "lerna": "^3.20.2",
     "prettier": "^2.0.4",
     "rimraf": "^3.0.2",
     "ts-jest": "^25.4.0",
+    "ts-node": "^8.8.2",
     "tsutils": "^3.17.1",
     "typescript": "^3.8.3"
   },
   "scripts": {
-    "clean": "rimraf coverage build tmp",
-    "build": "tsc -p tsconfig.release.json",
-    "build:watch": "tsc -w -p tsconfig.release.json",
+    "bootstrap": "lerna bootstrap --ignore-scripts && npm run build",
+    "build": "tsc --build packages/tsconfig.project.json",
+    "watch": "tsc --build --watch packages/tsconfig.project.json",
+    "update:tsconfig.json": "ts-node scripts/update-package-tsconfig.ts",
+    "update:package.json": "ts-node scripts/update-package-json.ts",
     "lint": "yarn eslint . --ext .ts,.tsx",
     "test": "jest --coverage",
     "test:watch": "jest --watch"
   },
   "author": "m.doaie <mdoaie@yahoo.co.uk>",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
-    "git": "^0.1.5",
-    "init": "^0.1.2",
+    "playwright-core": "^0.13.0",
     "tslib": "^1.11.1"
   }
 }
