--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@playwright-utils/browser",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Playwright browser helper",
   "author": "Cyrus-d <m.doaie@hotmail.com>",
   "homepage": "https://github.com/Cyrus-d/playwright-utils#readme",
@@ -26,7 +26,7 @@
   },
   "types": "./lib/index.d.ts",
   "scripts": {
-    "build": "tsc -b ./tsconfig.package.json",
+    "build": "rimraf lib/* && tsc -b ./tsconfig.package.json",
     "prepublish": "npm run build"
   },
   "publishConfig": {
