--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-jest": "^23.8.2",
+    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-sort-keys-fix": "^1.1.0",
     "jest": "^25.3.0",
     "lerna": "^3.20.2",
