--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,5 +21,6 @@
     "strictNullChecks": true,
     "noUnusedLocals": true
   },
-  "exclude": ["node_modules", "**/node_modules/*", "**/__tests__/*"]
+  "exclude": ["node_modules", "**/node_modules/*"],
+  "include": ["**/__tests__/**/*.ts", "**/scripts/**/*.ts"]
 }
