--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@playwright-utils/browser",
-  "version": "1.0.19",
+  "version": "1.0.20",
   "description": "Playwright browser helper",
   "author": "Cyrus-d <m.doaie@hotmail.com>",
   "homepage": "https://github.com/Cyrus-d/playwright-utils#readme",
@@ -29,8 +29,8 @@
     "access": "public"
   },
   "scripts": {
-    "build": "./node_modules/bin/rimraf lib/* tsconfig.package.tsbuildinfo && tsc -b ./tsconfig.package.json",
+    "build": "/node_modules/bin/rimraf lib/* tsconfig.package.tsbuildinfo && tsc -b ./tsconfig.package.json",
     "prepublish": "npm run build"
   },
-  "gitHead": "8ce277de3e5409fc36a7c75420d0ccd0b69c4342"
+  "gitHead": "551cef612f5725e51ecb41a774debf3a31d52b7f"
 }
