--- a/packages/mocks/package.json
+++ b/packages/mocks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@playwright-utils/mocks",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "> TODO: description",
   "author": "Cyrus-d <m.doaie@hotmail.com>",
   "homepage": "https://github.com/Cyrus-d/playwright-utils#readme",
@@ -22,12 +22,12 @@
     "url": "https://github.com/Cyrus-d/playwright-utils/issues"
   },
   "types": "./lib/index.d.ts",
-  "scripts": {
-    "build": "/node_modules/bin/rimraf lib/* tsconfig.package.tsbuildinfo && tsc -b ./tsconfig.package.json",
-    "prepublish": "npm run build"
-  },
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "551cef612f5725e51ecb41a774debf3a31d52b7f"
+  "gitHead": "af34a89bbb2ea1a880659aec2cad57efe20ff7ec",
+  "scripts": {
+    "build": "./node_modules/rimraf/bin.js lib/* tsconfig.package.tsbuildinfo && tsc -b ./tsconfig.package.json",
+    "prepublish": "npm run build"
+  }
 }
