--- a/package.json
+++ b/package.json
@@ -10,23 +10,23 @@
     "url": "https://github.com/Cyrus-d/playwright-utils.git"
   },
   "devDependencies": {
-    "@types/jest": "^25.2.1",
-    "@types/node": "^13.13.4",
-    "@typescript-eslint/eslint-plugin": "^2.30.0",
-    "@typescript-eslint/parser": "^2.30.0",
-    "eslint": "^6.8.0",
+    "@types/jest": "^26.0.0",
+    "@types/node": "^14.0.13",
+    "@typescript-eslint/eslint-plugin": "^3.4.0",
+    "@typescript-eslint/parser": "^3.4.0",
+    "eslint": "^7.3.1",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-jest": "^23.8.2",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-jest": "^23.17.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-sort-keys-fix": "^1.1.1",
-    "jest": "^25.5.3",
-    "lerna": "^3.20.2",
+    "jest": "^26.0.1",
+    "lerna": "^3.22.1",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
-    "ts-jest": "^25.4.0",
-    "ts-node": "^8.9.1",
+    "ts-jest": "^26.1.1",
+    "ts-node": "^8.10.2",
     "tsutils": "^3.17.1",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.5"
   },
   "scripts": {
     "bootstrap": "lerna bootstrap --ignore-scripts && npm run build",
@@ -45,7 +45,7 @@
     "access": "public"
   },
   "dependencies": {
-    "playwright-core": "^0.16.0",
-    "tslib": "^1.11.1"
+    "playwright-core": "1.0.2",
+    "tslib": "^2.0.0"
   }
 }
