--- a/packages/mocks/package.json
+++ b/packages/mocks/package.json
@@ -31,6 +31,6 @@
     "prepublish": "npm run build"
   },
   "dependencies": {
-    "playwright-core": "^0.16.0"
+    "playwright-core": "1.0.2"
   }
 }
