--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -22,6 +22,7 @@
     "url": "https://github.com/Cyrus-d/playwright-utils/issues"
   },
   "dependencies": {
+    "@playwright-utils/mocks": "^1.0.18",
     "playwright-core": "1.0.2"
   },
   "types": "./lib/index.d.ts",
@@ -32,5 +33,8 @@
   "scripts": {
     "build": "rimraf lib/* tsconfig.package.tsbuildinfo && tsc -b ./tsconfig.package.json",
     "prepublish": "npm run build"
+  },
+  "devDependencies": {
+    "@playwright-utils/mocks": "^1.0.18"
   }
 }
