--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "@playwright-utils/mocks": "^1.0.20",
-    "playwright-core": "1.0.2"
+    "playwright-core": "^1.2.0"
   },
   "types": "./lib/index.d.ts",
   "publishConfig": {
