--- a/packages/page/package.json
+++ b/packages/page/package.json
@@ -22,7 +22,7 @@
     "url": "https://github.com/Cyrus-d/playwright-utils/issues"
   },
   "dependencies": {
-    "playwright-core": "1.0.2"
+    "playwright-core": "^1.2.0"
   },
   "types": "./lib/index.d.ts",
   "publishConfig": {
