--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@playwright-utils/browser",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "Playwright browser helper",
   "author": "Cyrus-d <m.doaie@hotmail.com>",
   "homepage": "https://github.com/Cyrus-d/playwright-utils#readme",
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "@playwright-utils/mocks": "^1.0.21",
-    "playwright-core": "^1.2.0"
+    "playwright": "^1.2.0"
   },
   "types": "./lib/index.d.ts",
   "publishConfig": {
