--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -23,7 +23,8 @@
   },
   "dependencies": {
     "@playwright-utils/mocks": "^1.0.22",
-    "playwright": "^1.2.0"
+    "playwright": "^1.3.0",
+    "playwright-core": "^1.3.0"
   },
   "types": "./lib/index.d.ts",
   "publishConfig": {
