--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -23,8 +23,7 @@
   },
   "dependencies": {
     "@playwright-utils/mocks": "^1.0.23",
-    "playwright": "^1.3.0",
-    "playwright-core": "^1.3.0"
+    "playwright": "^1.4.2"
   },
   "types": "./lib/index.d.ts",
   "publishConfig": {
