--- a/package.json
+++ b/package.json
@@ -3,30 +3,30 @@
   "version": "0.0.2",
   "description": "Playwright utils",
   "engines": {
-    "node": ">= 12.13 <13"
+    "node": ">=13"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/Cyrus-d/playwright-utils.git"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.9",
-    "@types/node": "^14.11.2",
-    "@typescript-eslint/eslint-plugin": "^4.2.0",
-    "@typescript-eslint/parser": "^4.2.0",
-    "eslint": "^7.6.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-jest": "^24.0.2",
-    "eslint-plugin-prettier": "^3.1.4",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.22",
+    "@typescript-eslint/eslint-plugin": "^4.14.0",
+    "@typescript-eslint/parser": "^4.14.0",
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-sort-keys-fix": "^1.1.1",
-    "jest": "^26.3.0",
+    "jest": "^26.6.3",
     "lerna": "^3.22.1",
-    "prettier": "^2.0.5",
+    "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
-    "ts-jest": "^26.2.0",
-    "ts-node": "^9.0.0",
-    "tsutils": "^3.17.1",
-    "typescript": "^4.0.3"
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.1.1",
+    "tsutils": "^3.19.1",
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "bootstrap": "lerna bootstrap --ignore-scripts && npm run build",
@@ -45,6 +45,6 @@
     "access": "public"
   },
   "dependencies": {
-    "tslib": "^2.0.1"
+    "tslib": "^2.1.0"
   }
 }
